--- a/html-pages/forms-error-others/sign-up.html
+++ b/html-pages/forms-error-others/sign-up.html
@@ -198,7 +198,7 @@
                                     <span class="explore-button">Log In</span>
                             </div>
                         </a>
-                        <a href="../l" class="no-link-decor">
+                        <a href="../learn.html" class="no-link-decor">
                             <div class="explore-button-2 hover-glow-purple">
                                     <span class="sign-up-button">Explore</span>
                             </div>
